--- a/poseidon_demo/pom.xml
+++ b/poseidon_demo/pom.xml
@@ -8,11 +8,11 @@
 		<version>1.5.19.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.geekplus</groupId>
-	<artifactId>poseidon_demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>poseidon_demo</name>
-	<description>Demo project for Spring Boot</description>
+	<groupId>com.qiunan</groupId>
+	<artifactId>data_sync</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>data_sync</name>
+	<description>sync data for sku association</description>
 
 	<properties>
 		<java.version>1.8</java.version>
